err/radarsatlib.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/radarsatlib'...
Compiling './lib/python3.5/site-packages/radarsatlib/Chen.py'...
***   File "./lib/python3.5/site-packages/radarsatlib/Chen.py", line 38
    print 'file does not exist'
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/radarsatlib/CoPolCoeff.py'...
***   File "./lib/python3.5/site-packages/radarsatlib/CoPolCoeff.py", line 60
    print file+ " is done"
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/radarsatlib/DiffResolution.py'...
***   File "./lib/python3.5/site-packages/radarsatlib/DiffResolution.py", line 49
    print dir
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/radarsatlib/Dubois.py'...
***   File "./lib/python3.5/site-packages/radarsatlib/Dubois.py", line 25
    print 'file does not exist'
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/radarsatlib/MyFunctions.py'...
***   File "./lib/python3.5/site-packages/radarsatlib/MyFunctions.py", line 18
    print 'file does not exist'
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/radarsatlib/OH.py'...
***   File "./lib/python3.5/site-packages/radarsatlib/OH.py", line 41
    print 'file does not exist'
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/radarsatlib/SigmaPNG.py'...
***   File "./lib/python3.5/site-packages/radarsatlib/SigmaPNG.py", line 21
    print dir
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/radarsatlib/TrialMap.py'...
***   File "./lib/python3.5/site-packages/radarsatlib/TrialMap.py", line 23
    print 'file does not exist'
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/radarsatlib/calibrate.py'...
***   File "./lib/python3.5/site-packages/radarsatlib/calibrate.py", line 64
    print 'the name of filter not understood'
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/radarsatlib/myPCA.py'...
***   File "./lib/python3.5/site-packages/radarsatlib/myPCA.py", line 38
    print 'PCA - SVD used'
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/radarsatlib-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
